Update for Java 17 and gradle 7.x